--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         she first started cooking.</p>
     <p>The recipes are mostly Pakistani cuisine, but you will see some Italian, Chinese, Thai items as well.</p>
     <ul>
-        <li><a href="./recipes/chicken-biryani-recipe.html">Chicken Biryani</a></li>
-        <li><a href="./recipes/chicken-karahi-recipe.html">Chicken Karahi</a></li>
-        <li><a href="./recipes/penne-ala-vodka-recipe.html">Penne Ala Vodka</a></li>
-        <li><a href="./recipes/sweet-and-sour-eggplant-recipe.html">Sweet and sour eggplant</a></li>
+        <li><a href="./recipes/chicken-biryani-recipe.html" target="_blank" rel="noopener noreferre">Chicken Biryani</a>
+        </li>
+        <li><a href="./recipes/chicken-karahi-recipe.html" target="_blank" rel="noopener noreferre">Chicken Karahi</a>
+        </li>
+        <li><a href="./recipes/penne-ala-vodka-recipe.html" target="_blank" rel="noopener noreferre">Penne Ala Vodka</a>
+        </li>
+        <li><a href="./recipes/sweet-and-sour-eggplant-recipe.html" target="_blank" rel="noopener noreferre">Sweet and
+                sour eggplant</a></li>
     </ul>
 </body>
 
